opam-version: "2.0"
compiler: ["ocaml.4.11.1"]
roots: [
  "lambdapi.1.0"
  "ocaml.4.11.1"
  "ocaml-lsp-server.1.4.1"
  "ocamlformat.0.19.0"
  "ocamlformat-rpc.0.19.0"
]
installed: [
  "astring.0.8.5"
  "base.v0.14.1"
  "base-bigarray.base"
  "base-bytes.base"
  "base-threads.base"
  "base-unix.base"
  "bindlib.5.0.1"
  "biniou.1.2.1"
  "cmdliner.1.0.4"
  "cppo.1.6.8"
  "csexp.1.5.1"
  "dot-merlin-reader.4.1"
  "dune.2.9.1"
  "dune-build-info.2.9.1"
  "dune-configurator.2.9.1"
  "easy-format.1.3.2"
  "fix.20201120"
  "fpath.0.7.3"
  "gen.0.5.3"
  "lambdapi.1.0"
  "menhir.20211012"
  "menhirLib.20211012"
  "menhirSdk.20211012"
  "num.1.4"
  "ocaml.4.11.1"
  "ocaml-compiler-libs.v0.12.4"
  "ocaml-config.1"
  "ocaml-lsp-server.1.4.1"
  "ocaml-system.4.11.1"
  "ocamlbuild.0.14.0"
  "ocamlfind.1.9.1"
  "ocamlformat.0.19.0"
  "ocamlformat-rpc.0.19.0"
  "ocamlformat-rpc-lib.0.19.0"
  "ocp-indent.1.8.1"
  "odoc-parser.0.9.0"
  "ppx_derivers.1.2.1"
  "ppx_yojson_conv_lib.v0.14.0"
  "ppxlib.0.23.0"
  "pratter.1.2"
  "re.1.10.3"
  "result.1.5"
  "sedlex.2.4"
  "seq.base"
  "sexplib0.v0.14.0"
  "stdio.v0.14.0"
  "stdlib-shims.0.3.0"
  "timed.1.0"
  "topkg.1.0.4"
  "uchar.0.0.2"
  "uucp.14.0.0"
  "uuseg.14.0.0"
  "uutf.1.0.2"
  "why3.1.4.0"
  "yojson.1.7.0"
]
pinned: "lambdapi.1.0"
package "lambdapi" {
  opam-version: "2.0"
  version: "1.0"
  synopsis: "Proof assistant based on the λΠ-calculus modulo rewriting"
  description: """\
Proof assistant based on the λΠ-calculus modulo rewriting,
mostly compatible with Dedukti.

This package contains both the `lambdapi` proof assistant and the `lp-lsp`
Language Server Protocol helper for IDEs to check lambdapi files."""
  maintainer: "dedukti-dev@inria.fr"
  authors: "Deducteam"
  license: "CECILL-2.1"
  homepage: "https://github.com/Deducteam/lambdapi"
  bug-reports: "https://github.com/Deducteam/lambdapi/issues"
  depends: [
    "dune" {>= "2.1"}
    "ocaml" {>= "4.07.0"}
    "menhir" {>= "20200624"}
    "sedlex" {>= "2.2"}
    "alcotest" {with-test}
    "bindlib" {>= "5.0.1"}
    "timed" {>= "1.0"}
    "pratter" {>= "1.2"}
    "why3" {>= "1.4.0"}
    "yojson" {>= "1.6.0"}
    "cmdliner" {>= "1.0.3"}
    "stdlib-shims" {>= "0.1.0"}
  ]
  build: [
    ["dune" "subst"] {pinned}
    [
      "dune"
      "build"
      "-p"
      name
      "-j"
      jobs
      "@install"
      "@runtest" {with-test}
      "@doc" {with-doc}
    ]
  ]
  dev-repo: "git+https://github.com/Deducteam/lambdapi.git"
  url {
    src: "git://github.com/gabrielhdt/lambdapi#refiner"
  }
}
